<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icon_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/icon_stup"
            android:title="Stupine" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="Hartă stupine" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/icon_hranire"
            android:title="@string/menu_tools" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/icon_tratamente"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_control"
            android:icon="@drawable/ic_healing_black_24dp"
            android:title="Control Veteterinar" />

    </group>

    <item android:title="Comunicare">
        <menu>
            <item
                android:id="@+id/nav_wether"
                android:icon="@drawable/ic_cloud_black_24dp"
                android:title="Vremea" />
            <item
                android:id="@+id/user_detail"
                android:icon="@drawable/ic_perm_identity_black_24dp"
                android:title="Profilul meu" />
<!--            <item-->
<!--                android:id="@+id/nav_send"-->
<!--                android:icon="@drawable/icon_backup"-->
<!--                android:title="@string/menu_send" />-->
        </menu>
    </item>

</menu>
