<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="#FBDE44"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">
    <!--    FFC000-->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="104dp"
        android:layout_height="80dp"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:layout_constraintBottom_toTopOf="@+id/name_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile_face_bee" />

    <TextView
        android:id="@+id/name_user"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/colorGrayOnYellow"
        android:textSize="14dp"
        app:layout_constraintBottom_toTopOf="@+id/email_user"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/email_user"
        android:layout_width="235dp"
        android:layout_height="20dp"
        android:text="@string/nav_header_subtitle"
        android:textColor="@color/colorGrayOnYellow"
        android:textSize="13dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView6More"
        android:layout_width="41dp"
        android:layout_height="38dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_exit_to_app_black_24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
